# asetools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSTRAINTS_MIGRATION_GUIDE.md  CONTEXT.md  LICENSE  MANIFEST.in  README  README.md  VASP_CALCULATION_GUIDE.html  VASP_CALCULATION_GUIDE.md  analysis.py  databases.py  doscar_analysis.py  pixi.toml  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_constraint_integration.py  test_dimer_implementation.py
.github/workflows/: ci.yml
asetools/: AB_INITIO_THERMODYNAMICS_README.html  AB_INITIO_THERMODYNAMICS_README.md  __init__.py  ab_initio_thermodynamics.py  adsorbate.py  analysis copy.py  analysis.py  analysis_copy2.py  appliedpotential.py  bond_valence.py  constraints.py  copy_appliedpotential.py  databases.py  doscar_analysis.py  neb.py  plots.py
asetools/analysis/: __init__.py  symmetry.py  vasp.py
asetools/cli/: __init__.py  asegui.py  calculate_bader_charges.py  comparevaspparam.py  genpotentialdepcalc.py  getenergy.py  gibbsFE.py  inputparam_from_outcar.py  outcar_extract.py  plotdos.py  remove_slashes.py  reorder_atoms.py  summaryfolders.py  thermochem.py  vasp2db.py  vasp_2_arc.py  vaspbackup.py  view_outcars.py
asetools/data/: OUTCAR  bvparm2020.cif  poscar  surface_properties.json
asetools/data/summary_test/: README
asetools/data/summary_test/0_1.2/: poscar
asetools/data/summary_test/0_1.2/01_wrong_magmom/: INCAR
asetools/data/summary_test/1_1.0/: INCAR  OSZICAR  OUTCAR  PCDAT
asetools/data/summary_test/1_1.0/01_wrong_magmom/: INCAR
asetools/data/summary_test/2_0.8/: OUTCAR
asetools/data/summary_test/3_0.6/: OSZICAR  OUTCAR  alpha.out
asetools/data/summary_test/4_0.4/: EIGENVAL  alpha.out
asetools/data/summary_test/4_0.4/01_wrong_magmom/: INCAR
asetools/data/summary_test/5_0.2/: OSZICAR
asetools/database/: __init__.py  databases.py
asetools/electrochemistry/: __init__.py  _odr_compat.py  appliedpotential.py  copy_appliedpotential.py
asetools/electronic/: __init__.py  doscar.py
asetools/manager/: calculatorsetuptools.py  logger.py  manager.py
asetools/manager/sample_yaml/: aor.yaml  aor_with_ase_optimizers.yaml  aor_with_hookean_constraints.yaml  dimer_with_vaspinteractive.yaml
asetools/parsers/: __init__.py  vasp_outcar.py
asetools/pathways/: __init__.py  dimer.py  neb.py
asetools/plotting/: __init__.py  plots.py
asetools/structure/: __init__.py  adsorbate.py  bond_valence.py
asetools/tests/: test_ab_initio_thermodynamics.py  test_analysis.py  test_bond_valence.py  test_constraints.py  test_database.py  test_doscar.py  test_freq.py  test_manager.py
asetools/thermodynamics/: __init__.py  ab_initio.py
asetools/workflow/: __init__.py  calculatorsetuptools.py  constraints.py  logger.py  manager.py
asetools/workflow/sample_yaml/: aor_with_ase_optimizers.yaml
docs/: ab_initio_thermodynamics.md  api_reference.md  cli_reference.md  constraints_quickstart.md  index.md
examples/: ab_initio_thermodynamics_example.py  dimer_example.py  dimer_production_config.yaml  vasp2db_usage.py
scratch/: calculate_charge.py
src/asetools/: analysis.py
src/tools/: analysis.py  databases.py  doscar_analysis.py
tests/: conftest.py  test_ab_initio_thermodynamics.py  test_analysis.py  test_analysis_convergence.py  test_bond_valence.py  test_cli_tools.py  test_constraints.py  test_constraints_integration.py  test_database.py  test_database_extended.py  test_dimer.py  test_doscar.py  test_doscar_extended.py  test_electrochemistry.py  test_electronic.py  test_freq.py  test_imports.py  test_manager.py  test_parsers_outcar.py  test_parsers_utils.py  test_plots.py  test_structure.py  test_symmetry.py  test_workflow_utils.py
tests/data/: CONTCAR_CuNiOOH_001  OUTCAR_vasp6
tests/data/summary_test/: README
tests/data/summary_test/0_1.2/: INCAR  OSZICAR  OUTCAR  alpha.out  sorted_POSCAR
tests/data/summary_test/1_1.0/: DOSCAR  alpha.out
tests/data/summary_test/2_0.8/: IBZKPT  INCAR  OSZICAR  alpha.out
tests/data/summary_test/3_0.6/: INCAR  calcVASPcalc_battery.sh
tests/data/summary_test/4_0.4/: IBZKPT  INCAR  OSZICAR  OUTCAR  XDATCAR
tests/data/summary_test/5_0.2/: IBZKPT  INCAR  OUTCAR  alpha.out
