[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asetools"
version = "0.2.0"
description = "Python tools for computational materials science using ASE and VASP"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Juan M Arce-Ramos"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
keywords = [
    "ase",
    "vasp",
    "dft",
    "computational-chemistry",
    "materials-science",
    "density-functional-theory",
]
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "ase",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/manuelarcer/asetools"
Repository = "https://github.com/manuelarcer/asetools"
Documentation = "https://github.com/manuelarcer/asetools/tree/main/docs"
Issues = "https://github.com/manuelarcer/asetools/issues"

[project.optional-dependencies]
symmetry = ["spglib"]
interactive = ["vasp-interactive"]
dev = ["pytest", "ruff"]

[project.scripts]
asegui = "asetools.cli.asegui:main"
calculate-bader-charges = "asetools.cli.calculate_bader_charges:main"
comparevaspparam = "asetools.cli.comparevaspparam:main"
genpotentialdepcalc = "asetools.cli.genpotentialdepcalc:main"
getenergy = "asetools.cli.getenergy:main"
gibbsFE = "asetools.cli.gibbsFE:main"
inputparam-from-outcar = "asetools.cli.inputparam_from_outcar:main"
outcar-extract = "asetools.cli.outcar_extract:main"
plotdos = "asetools.cli.plotdos:main"
remove-slashes = "asetools.cli.remove_slashes:main"
reorder-atoms = "asetools.cli.reorder_atoms:main"
summaryfolders = "asetools.cli.summaryfolders:main"
thermochem = "asetools.cli.thermochem:main"
vasp-2-arc = "asetools.cli.vasp_2_arc:main"
vasp2db = "asetools.cli.vasp2db:main"
vaspbackup = "asetools.cli.vaspbackup:main"
view-outcars = "asetools.cli.view_outcars:main"

[tool.setuptools.packages.find]
include = ["asetools*"]

[tool.setuptools.package-data]
"asetools" = ["data/*.cif", "data/*.json", "workflow/sample_yaml/*.yaml"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E702",   # multiple statements on one line (legacy style, low risk)
    "E711",   # none-comparison (legacy == None patterns)

    "E741",   # ambiguous variable name (common in scientific code: l, I, O)
    "B006",   # mutable default in function arg (too many in legacy code)

    "UP015",  # unnecessary open mode 'r'
    "SIM108", # ternary operator (readability preference)
    "SIM115", # open-file-with-context-handler (legacy patterns, fix incrementally)
    "RUF001", # ambiguous unicode in string (× used intentionally in scientific output)
    "RUF002", # ambiguous unicode in docstring (mathematical notation)
    "RUF003", # ambiguous unicode in comment (mathematical notation)
    "RUF005", # collection literal concatenation
    "RUF012", # mutable class default (class-level constants, not mutated)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ are intentional re-exports
"tests/*" = ["B", "SIM"]  # relax rules in tests

[tool.ruff.lint.isort]
known-first-party = ["asetools"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
