

#from setuptools import setup

#setup(
#    name="asetools",
#    version='1.0',
#    zip_safe=True,
#    py_modules=['analysis', 'doscar_analysis', 'databases'],
#    scripts=['bin/foldersummary.py']
#)

[metadata]
name = asetools
version = 0.1
author = Juan M Arce-Ramos
description = Python tools meanly utilizing ASE package
url = https://github.com/manuelarcer/asetools.git

[options]
install_requires = 
    pandas
    matplotlib
    numpy
    scipy
    ase
packages = find:
include_package_data = True
scripts = 
    bin/summaryfolders.py
    bin/getenergy.py