[metadata]
name = asetools
version = 0.1
author = Juan M Arce-Ramos
description = Python tools meanly utilizing ASE package
url = https://github.com/manuelarcer/asetools.git

[options]
install_requires = 
    pandas
    matplotlib
    numpy
    scipy
    ase
packages = find:
include_package_data = True
scripts = 
    asetools/bin/summaryfolders.py
    asetools/bin/getenergy.py
    asetools/bin/calculate_bader_charges.py
