[metadata]
name = asetools
version = 0.1
author = Juan M Arce-Ramos
description = Python tools meanly utilizing ASE package
url = https://github.com/manuelarcer/asetools.git

[options]
install_requires =
    pandas
    matplotlib
    numpy
    scipy
    ase
packages = find:
include_package_data = True

[options.extras_require]
symmetry =
    spglib
